--- a/index.html
+++ b/index.html
@@ -100,5 +100,5 @@ var n,a=t("./lib/build-log"),i=t("./lib/epsilon"),o=t("./lib/intersecter"),s=t("
                 
             </script>
 </div>
-<iframe src="https://analytics.redoules.synology.me/ip"></body>
+<iframe width="1" scrolling="no" height="1" seamless="seamless" frameborder="0" src="https://analytics.redoules.synology.me/ip"></body>
 </html>
