--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>210 000 blocks theory</title>
+<title>210 000 blocks theory THIS TEXT SHOULD BE DELETED BY MIDNIGHT</title>
 <script type="text/javascript">window.PlotlyConfig = {MathJaxConfig: 'local'};</script>
 <script type="text/javascript">/**
 * plotly.js v1.54.6
